[package]
name = "stateq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
bat = { version = "0.23", features = [] }
colored = "2.0"
uuid = { version = "0.8.2", features = ["v4"] }
stateq-compiler = { path = "../compiler" }

[build]
rustflags = ["-C", "target-feature=+crt-static"]
