[package]
name = "qivm-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qivm"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
gates_def = { path = "src/gates_def" }
bit-set = "0.5"
num = "0.4"
libm = "0.2"
ndarray = "0.15"
strum = "0.23"
strum_macros = "0.23"
readonly = "0.2"
nalgebra = "0.30"
nalgebra-lapack = "0.21.0"
approx = "0.5"
lazy_static = "1.4"
num_enum = "0.5"
libloading = "0.7"
num-traits = "0.2"
num-derive = "0.3"
enum_dispatch = "0.3.13"
lapack = "0.19.0"

[dev-dependencies]
rand = "0.8"
qivmbe-sim = { path = "../simulator" }

[build-dependencies]
cbindgen = "0.20.0"
qivmbe-sim = { path = "../simulator" }
