CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(simulator-qivmbe)

SET(CMAKE_CXX_STANDARD 20)

SET(DEBUG                   true)
SET(OPTIMIZATION_LEVEL      0)

FILE(GLOB_RECURSE sourcefiles "src/*.cpp")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O${OPTIMIZATION_LEVEL}")

IF(DEBUG)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
    ADD_COMPILE_DEFINITIONS(DEBUG)
ENDIF()

INCLUDE_DIRECTORIES(QuEST/QuEST/include)

OPTION(SHARED "" 0)
OPTION(GPUACCELERATED "" 1)

ADD_SUBDIRECTORY(QuEST/QuEST)

ADD_LIBRARY(qivmbe SHARED ${sourcefiles})

ADD_DEPENDENCIES(qivmbe QuEST)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/QuEST/QuEST)
TARGET_LINK_LIBRARIES(qivmbe PRIVATE QuEST)
